--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,10 @@ django = "*"
 django-crispy-forms = "*"
 djangorestframework = "~=3.11.0"
 django-cors-headers = "==3.4.0"
+environs = {version = "==8.0.0", extras = ["django"]}
+send-email = "*"
+psycopg2-binary = "*"
+gunicorn = "==19.9.0"
 
 [dev-packages]
 
