--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 export SECRET_KEY=django-insecure-llzpayffx2k163@bso_p7xd^k9_mlt46xn(j)w#806z6a%z^=1
 export DATABASE_URL=sqlite:///db.sqlite3
+export EMAIl_HOST_PASSWORD=d1f601a357f20d909a8a719bc4e7f5e0-fa6e84b7-b4a2e533
 
